--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^13.0.0",
     "@rollup/plugin-node-resolve": "^7.1.1",
+    "@tsconfig/svelte": "^1.0.10",
     "nollup": "^0.12.0",
     "rollup": "^2.10.2",
     "rollup-plugin-hot": "^0.1.0",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-svelte-hot": "^0.10.0",
     "rollup-plugin-terser": "^5.1.2",
-    "svelte": "^3.23.2"
+    "rollup-plugin-typescript2": "^0.29.0",
+    "svelte": "^3.32.0",
+    "svelte-check": "^1.1.29",
+    "svelte-preprocess": "^4.6.3",
+    "tslib": "^2.1.0",
+    "typescript": "^4.1.3"
   },
   "dependencies": {
     "date-fns": "^2.16.1",
