--- a/package.json
+++ b/package.json
@@ -4,25 +4,26 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^13.0.0",
     "@rollup/plugin-node-resolve": "^7.1.1",
-    "@tsconfig/svelte": "^1.0.10",
+    "@rollup/plugin-replace": "^3.0.0",
+    "@tsconfig/svelte": "^1.0.13",
     "nollup": "^0.12.0",
-    "rollup": "^2.10.2",
+    "rollup": "^2.56.2",
     "rollup-plugin-hot": "^0.1.0",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-svelte-hot": "^0.10.0",
     "rollup-plugin-terser": "^5.1.2",
     "rollup-plugin-typescript2": "^0.29.0",
-    "svelte": "^3.32.0",
-    "svelte-check": "^1.1.29",
-    "svelte-preprocess": "^4.6.3",
-    "tslib": "^2.1.0",
-    "typescript": "^4.1.3"
+    "svelte": "^3.42.1",
+    "svelte-check": "^1.6.0",
+    "svelte-preprocess": "^4.7.4",
+    "tslib": "^2.3.1",
+    "typescript": "^4.3.5"
   },
   "dependencies": {
-    "date-fns": "^2.16.1",
-    "date-fns-tz": "^1.0.10",
-    "ics": "^2.25.0",
-    "lodash": "^4.17.20",
+    "date-fns": "^2.23.0",
+    "date-fns-tz": "^1.1.6",
+    "ics": "^2.31.0",
+    "lodash": "^4.17.21",
     "sirv-cli": "^0.4.4"
   },
   "scripts": {
