--- a/package.json
+++ b/package.json
@@ -1,37 +1,34 @@
 {
-  "name": "svelte-app",
-  "version": "1.0.0",
-  "devDependencies": {
-    "@rollup/plugin-commonjs": "^13.0.0",
-    "@rollup/plugin-node-resolve": "^7.1.1",
-    "@rollup/plugin-replace": "^3.0.0",
-    "@tsconfig/svelte": "^1.0.13",
-    "nollup": "^0.12.0",
-    "rollup": "^2.56.2",
-    "rollup-plugin-hot": "^0.1.0",
-    "rollup-plugin-livereload": "^1.0.0",
-    "rollup-plugin-svelte-hot": "^0.10.0",
-    "rollup-plugin-terser": "^5.1.2",
-    "rollup-plugin-typescript2": "^0.29.0",
-    "svelte": "^3.42.1",
-    "svelte-check": "^1.6.0",
-    "svelte-preprocess": "^4.7.4",
-    "tslib": "^2.3.1",
-    "typescript": "^4.3.5"
-  },
-  "dependencies": {
-    "date-fns": "^2.23.0",
-    "date-fns-tz": "^1.1.6",
-    "ics": "^2.31.0",
-    "lodash": "^4.17.21",
-    "sirv-cli": "^0.4.4"
-  },
-  "scripts": {
-    "build": "rollup -c",
-    "dev:rollup": "rollup -c -w",
-    "dev:livereload": "rollup -c -w --environment LIVERELOAD",
-    "dev:nollup": "nollup -c --hot --port 5000 --content-base ./public",
-    "dev": "npm run dev:nollup",
-    "start": "sirv public"
-  }
+	"name": "timetable",
+	"version": "2.0.0",
+	"scripts": {
+		"dev": "svelte-kit dev",
+		"build": "svelte-kit build",
+		"package": "svelte-kit package",
+		"preview": "svelte-kit preview",
+		"check": "svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
+		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-static": "^1.0.0-next.22",
+		"@sveltejs/kit": "next",
+		"@typescript-eslint/eslint-plugin": "^4.31.1",
+		"@typescript-eslint/parser": "^4.31.1",
+		"date-fns": "^2.27.0",
+		"date-fns-tz": "^1.2.0",
+		"eslint": "^7.32.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-svelte3": "^3.2.1",
+		"ics": "^2.35.0",
+		"prettier": "^2.4.1",
+		"prettier-plugin-svelte": "^2.4.0",
+		"svelte": "^3.44.0",
+		"svelte-check": "^2.2.6",
+		"svelte-preprocess": "^4.9.4",
+		"tslib": "^2.3.1",
+		"typescript": "^4.4.3"
+	},
+	"type": "module"
 }
