--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,8 @@
 		"allowJs": true,
 		"checkJs": true,
 		"paths": {
-			"$comp/*": ["src/components/*"],
-			"$helper/*": ["src/helpers/*"]
+			"@comp/*": ["src/components/*"],
+			"@helper/*": ["src/helpers/*"]
 		}
 	},
 	"include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.ts", "src/**/*.svelte"]
