--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
+		"@poppanator/sveltekit-svg": "^0.2.3",
 		"@sveltejs/adapter-static": "^1.0.0-next.22",
 		"@sveltejs/kit": "next",
 		"@typescript-eslint/eslint-plugin": "^4.31.1",
