--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,13 +11,14 @@
 		"esModuleInterop": true,
 		"skipLibCheck": true,
 		"forceConsistentCasingInFileNames": true,
-		"baseUrl": ".",
 		"allowJs": true,
 		"checkJs": true,
+		"baseUrl": ".",
 		"paths": {
+			"@svg/*": ["src/svg/*"],
 			"@comp/*": ["src/components/*"],
 			"@helper/*": ["src/helpers/*"]
 		}
 	},
-	"include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.ts", "src/**/*.svelte"]
+	"include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.ts", "src/**/*.svelte", "src/global.d.ts"]
 }
