REFACTOR: Update SvelteKit

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,11 @@
 {
+	"extends": "./.svelte-kit/tsconfig.json",
 	"compilerOptions": {
-		"moduleResolution": "node",
-		"module": "es2020",
-		"lib": ["es2020", "DOM"],
-		"target": "es2020",
-		"importsNotUsedAsValues": "error",
-		"isolatedModules": true,
-		"resolveJsonModule": true,
-		"sourceMap": true,
-		"esModuleInterop": true,
-		"skipLibCheck": true,
-		"forceConsistentCasingInFileNames": true,
-		"allowJs": true,
-		"checkJs": true,
 		"baseUrl": ".",
 		"paths": {
 			"@svg/*": ["src/svg/*"],
 			"@comp/*": ["src/components/*"],
 			"@helper/*": ["src/helpers/*"]
 		}
-	},
-	"include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.ts", "src/**/*.svelte", "src/global.d.ts"]
+	}
 }
